Added starting framework to update right panel